Refine the folder structure and add dockerfile with careful configuration

--- a/ring price project/main.ipynb
+++ b/ring price project/main.ipynb
@@ -19,6 +19,7 @@
     "from selenium.webdriver.firefox.service import Service as FirefoxService\n",
     "from selenium.webdriver.firefox.options import Options as FirefoxOptions\n",
     "from webdriver_manager.firefox import GeckoDriverManager\n",
+    "from modules.database import init_db, save_to_sql\n",
     "\n",
     "# Import your custom modules\n",
     "sys.path.append(os.path.abspath(os.path.join('..')))\n",
@@ -26,6 +27,20 @@
     "import modules.extractor as extractor\n",
     "from config.model_urls import model_urls\n",
     "from config.config import LOGIN_EMAIL, LOGIN_PASSWORD, main_url\n",
+    "\n",
+    "try:\n",
+    "    from config.config import LOGIN_EMAIL, LOGIN_PASSWORD, main_url\n",
+    "except ImportError:\n",
+    "    LOGIN_EMAIL = os.getenv('LOGIN_EMAIL')\n",
+    "    LOGIN_PASSWORD = os.getenv('LOGIN_PASSWORD')\n",
+    "    main_url = os.getenv('MAIN_URL', 'https://example.com/login')\n",
+    "\n",
+    "try:\n",
+    "    from config.model_urls import model_urls\n",
+    "    print(\" Successfully load URLs from local list\")\n",
+    "except ImportError:\n",
+    "    model_urls = [] \n",
+    "    print(\"Warning: Cannot find model_urls.py. Please create a correspoding file in config/ or import urls manually.\")\n",
     "\n",
     "# --- 1. SETUP FIREFOX BROWSER ---\n",
     "def init_driver():\n",
@@ -91,6 +106,14 @@
     "\n",
     "# --- 3. MAIN EXECUTION FLOW ---\n",
     "def main():\n",
+    "    if not LOGIN_EMAIL or not LOGIN_PASSWORD:\n",
+    "        print(\"Error: Missing credentials!\")\n",
+    "        print(\"Please set config/config.py or environment variables.\")\n",
+    "        sys.exit(1)\n",
+    "        \n",
+    "    if \"example.com\" in main_url:\n",
+    "        print(\"Warning: Using placeholder URL. The scraper might not work as expected.\")\n",
+    "\n",
     "    os.makedirs(os.path.join('data', 'raw'), exist_ok=True)\n",
     "    os.makedirs(os.path.join('data', 'processed'), exist_ok=True)\n",
     "    \n",
@@ -99,6 +122,7 @@
     "\n",
     "    driver = init_driver()\n",
     "    all_extracted_data = []\n",
+    "    init_db()\n",
     "\n",
     "    try:\n",
     "        # Step A: Perform Login\n",
@@ -124,6 +148,7 @@
     "        # Step C: Save all data to Excel\n",
     "        if all_extracted_data:\n",
     "            save_results_to_xlsx(all_extracted_data)\n",
+    "            save_to_sql(all_extracted_data)\n",
     "        else:\n",
     "            print(\"No data was extracted.\")\n",
     "\n",
